# wvfrm

./: .gitignore  CMakeLists.txt  LICENSE  PLUGIN_PLAN.md  README.md
src/: JuceIncludes.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AnalysisRingBuffer.cpp  AnalysisRingBuffer.h  BandAnalyzer3.cpp  BandAnalyzer3.h  ChannelViews.h  LoopClock.cpp  LoopClock.h  PhaseProjection.cpp  PhaseProjection.h  TimeWindowResolver.cpp  TimeWindowResolver.h
src/ui/: ThemeEngine.cpp  ThemeEngine.h  WaveformView.cpp  WaveformView.h
tests/: AnalysisRingBufferTests.cpp  BandAnalyzer3Tests.cpp  ChannelViewsTests.cpp  LoopClockTests.cpp  ParametersTests.cpp  PhaseProjectionTests.cpp  ThemeEngineTests.cpp  TimeWindowResolverTests.cpp  main.cpp
